--- a/client/src/App.css
+++ b/client/src/App.css
@@ -15,11 +15,16 @@
   align-items: center;
   background-color: var(--white-color);
   color: var(--black-font-color);
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  z-index: 1000;
 }
 
 .logoPannel {
   display: flex;
-  flex-shrink: 1; 
+  flex-shrink: 1;
   width: fit-content;
   width: 10%;
   align-items: center;
@@ -33,9 +38,8 @@
 
 .pagePannel {
   display: flex;
-  flex-grow: 1; 
+  flex-grow: 1;
   justify-content: center;
-  
 }
 
 .header p {
@@ -44,11 +48,10 @@
   color: var(--black-font-color);
 }
 
-
 .loginPannel {
   display: flex;
   justify-content: space-evenly;
-  margin-right: 16px;
+  margin-right: 8px;
   width: 15%;
 }
 
@@ -62,7 +65,8 @@
   font-weight: bold;
   align-items: center;
   height: 3rem;
-  
+  padding-left: 5%;
+  padding-right: 5%;
 }
 
 .header button:hover {
@@ -70,18 +74,43 @@
   transform: translateY(-2px);
 }
 
+.header .inputForm {
+  border-radius: 10px;
+  border: 1px solid grey;
+  width: auto;
+  margin-right: 20px;
+  width: 20%;
+}
+
+.header .searchIcon {
+  width: 30px;
+  height: 30px;
+  padding-left: 0px;
+  margin-left: 0px;
+}
 
 /* ------------------------ SEARCHBAR -------------------------- */
 
 .searchbar {
-  padding: 10px;
-  background-image: url('assets/background.jpg');
-  background-size: contain; 
-  background-position: center;
   display: flex;
-  justify-content: center; 
+  flex-direction: column;
+  /* padding: 10px; */
+  background-image: url('assets/background2.jpg');
+  background-size: cover;
+  background-position: center;
+  /* background-repeat: no-repeat; */
+  display: flex;
+  justify-content: center;
   align-items: center;
-  height: 30rem;
+  height: 40rem;
+}
+
+.titleSearchbar {
+  color: var(--white-font-color);
+  font-size: 48px;
+  font-weight: bold;
+  text-align: center;
+  margin-bottom: 30px;
 }
 
 .inputForm {
@@ -91,7 +120,7 @@
   display: flex;
   align-items: center;
   padding: 5px;
-  width: 50%;
+  /* width: 50%; */
 }
 
 .searchIcon {
@@ -104,7 +133,8 @@
   flex-grow: 1;
   height: 100%;
   outline: none;
-  padding: 16px;
+  /* padding: 16px; */
+  padding-left: 8px;
   border: hidden;
   font-size: 16px;
 }
@@ -117,7 +147,7 @@
   border-radius: 10px;
   border: 2px solid var(--light-green-color);
   box-sizing: border-box;
-  background-color: transparent;
+  background-color: var(--light-green-color);
   color: var(--black-font-color);
   font-size: 16px;
   font-weight: bold;
@@ -126,26 +156,137 @@
   padding: 10px;
 }
 
-
 .searchButton:hover {
-  background-color: var(--light-green-color);
+  background-color: transparent;
 }
 
 /* ------------------------ CARROUSSEL --------------------------  */
 
-
 .carrousselRecipe {
 }
 
-.titleCarroussel {
+/* ------------------------ TITLECATEGORY --------------------------  */
+
+.titleCategory {
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  margin-left: 4%;
+  padding: 20px 20px 0px 20px;
   font-weight: bold;
   font-size: 24px;
+  color: var(--black-font-color);
+}
 
+/* ------------------------ RECIPECARD --------------------------  */
 
+.card {
+  position: relative;
+  width: 224px;
+  height: 254px;
+  background: #f5f5f5;
+  border-radius: 8px;
+  color: #232323;
+  padding: 16px;
+  transition: all 0.5s ease-in-out;
+  overflow: hidden;
+  margin: 10px 15px 10px 15px;
+  background-image: url('assets/background.jpg');
+  background-size: cover;
+  background-position: center;
+}
+
+.card-hidden {
+  display: flex;
+  transform: translateY(200%);
+  flex-direction: column;
+  gap: 0.5rem;
+  transition:
+    transform 0.5s ease-in,
+    opacity 0.3s ease-in;
+  opacity: 0;
+}
+
+/*Hovers*/
+.card:hover {
+  transform: translate(-15px, -15px);
+  border-color: #5bc0eb;
+}
+
+.card:hover .card-hidden {
+  transform: translateY(0);
+  opacity: 1;
+}
+
+.card:hover .title {
+  transform: translateY(200%);
+}
+
+/*Text*/
+.title {
+  position: absolute;
+  bottom: 1rem;
+  font-weight: 700;
+  font-size: 1.5rem;
+  transition: transform 0.25s ease-out;
+}
+
+.title-in {
+  font-weight: 700;
+  font-size: 1.25rem;
+}
+
+.styles-module_slider__o0fqa {
+  padding-top: 20px;
+  margin: 0 5% 0 5%;
+}
+
+/*Button*/
+.button {
+  display: inline-flex;
+  justify-content: center;
+  padding: 8px;
+  border-radius: 24px;
+  font-weight: 600;
+  background-color: var(--light-green-color);
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.button:hover {
+  background-color: var(--dark-green-color);
+}
+
+.recipe-image {
+  width: 100%;
+  height: auto;
+  /* border-radius: 8px 8px 0 0; */
+  object-fit: cover;
+}
+
+/* ------------------------ RECIPE --------------------------  */
+
+.cards-container {
+  display: grid;
+  grid-template-columns: repeat(6, 31ch);
+  margin: 0 5% 0 5%;
+  gap: 20px;
+  padding-top: 20px;
+}
+
+@media (max-width: 1200px) {
+  .cards-container {
+    grid-template-columns: repeat(4, 1fr);
+  }
+}
+
+@media (max-width: 768px) {
+  .cards-container {
+    grid-template-columns: repeat(2, 1fr);
+  }
 }
 
 /* ------------------------ APP -------------------------- */
-
 
 .App {
   text-align: center;
@@ -188,15 +329,17 @@
 
 /* ------------------------ LOGIN / REGISTER -------------------------- */
 
-.login-page, .register-page {
+.login-page,
+.register-page {
   display: flex;
   justify-content: center;
   align-items: center;
   height: 100vh;
-  background-color: #2ecc71; 
+  background-color: #2ecc71;
 }
 
-.login-form, .register-form {
+.login-form,
+.register-form {
   padding: 20px;
   background: rgba(255, 255, 255, 0.7);
   border-radius: 8px;
@@ -204,7 +347,8 @@
   box-shadow: 0 0 10px 0 rgba(0, 0, 0, 0.1);
 }
 
-.login-form h2, .register-form h2 {
+.login-form h2,
+.register-form h2 {
   text-align: center;
   margin-bottom: 20px;
   font-size: 2rem;
@@ -236,7 +380,7 @@
   padding: 10px;
   border: none;
   border-radius: 4px;
-  background-color: #27ae60; 
+  background-color: #27ae60;
   color: white;
   cursor: pointer;
   font-size: 16px;
@@ -253,4 +397,3 @@
   cursor: pointer;
   text-decoration: underline;
 }
-
