--- a/client/src/App.css
+++ b/client/src/App.css
@@ -397,3 +397,51 @@
   cursor: pointer;
   text-decoration: underline;
 }
+
+/* ------------------------ ADD_RECIPE_FORM -------------------------- */
+
+.content-form {
+  z-index: 2;
+  width: 100%;
+  height: 100%;
+  margin: auto;
+  position: absolute;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  form {
+    background-color: rgba(38, 191, 59, 0.35);
+    border-radius: 20px;
+    width: 60%;
+    height: auto;
+    margin: auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: column;
+    label {
+      margin: 2%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+    }
+    input {
+      margin: 2%;
+      border-radius: 5px;
+    }
+    textarea {
+      border-radius: 5px;
+    }
+  }
+
+}
+.back-form {
+  width: 100vw;
+  position: fixed;
+  height: 100vh;
+  margin: 0;
+  background-image: url('./assets/back-form.jpg');
+  background-repeat: no-repeat;
+  background-size: cover;
+}
