--- a/client/src/App.css
+++ b/client/src/App.css
@@ -409,10 +409,11 @@
   display: flex;
   align-items: center;
   justify-content: center;
+  font-family: "Bahnschrift", sans-serif;
   form {
-    background-color: rgba(38, 191, 59, 0.35);
+    background-color: rgba(233, 252, 233, 0.81);
     border-radius: 20px;
-    width: 60%;
+    width: 70%;
     height: auto;
     margin: auto;
     display: flex;
@@ -420,23 +421,194 @@
     justify-content: center;
     flex-direction: column;
     label {
-      margin: 2%;
       display: flex;
       align-items: center;
       width: 90%;
-      justify-content: space-between;
+      justify-content: center;
       flex-direction: row;
     }
-    input {
-      margin: 2%;
+    .formName {
+      text-align: center;
+      width: 60%;
+      margin: 4%;
+      padding: 5px;
+      font-size: 1.1em;
       border-radius: 5px;
+      border: none;
     }
-    textarea {
-      border-radius: 5px;
+    .formTimes {
+      margin: 3%;
+      background-color: rgba(207, 253, 207, 0.81);
+      padding: 2px 15px 15px;
+      border-radius: 15px;
+      width: 70%;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      flex-direction: row;
+      label {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: column;
+        p  {
+          margin-bottom: 5px;
+        }
+        input {
+          width: 45%;
+          padding: 4px;
+          border-radius: 5px;
+          border: none;
+        }
+      }
+    }
+    .formDescription {
+      width: 70%;
+      textarea {
+        width: 100%;
+        height: 100px;
+        padding: 5px;
+        font-family: "Segoe UI Emoji", sans-serif;
+        border-radius: 5px;
+        border: none;
+        font-size: 1.02em;
+
+      }
+    }
+    .formSteps {
+      width: 70%;
+      h3 {
+        width: 100%;
+        text-align: center;
+      }
+      .formStep {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        flex-direction: row;
+        width: 90%;
+        .inputs {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          width: 100%;
+          div {
+            width: 100%;
+            input {
+              width: 70%;
+              padding: 5px;
+              font-size: 1.02em;
+              font-family: "Segoe UI Emoji", sans-serif;
+              border-radius: 5px;
+              border: none;
+              margin: 2px;
+            }
+          }
+        }
+      }
+      button {
+          width: 30%;
+          padding: 10px;
+          border: none;
+          border-radius: 4px;
+          background-color: #27ae60;
+          color: white;
+          cursor: pointer;
+          font-size: 1.02em;
+      }
+    }
+    .formIngredients {
+      width: 70%;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      h3 {
+        width: 100%;
+        text-align: center;
+      }
+      .ingredientsParts {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        flex-direction: row;
+        width: 100%;
+        .inputIngredients {
+          display: flex;
+          align-items: center;
+          justify-content: center;
+          flex-direction: column;
+          font-family: "Segoe UI Emoji", sans-serif;
+          padding: 5px;
+          width: 33%;
+          font-size: 1.02em;
+          border: none;
+          border-radius: 4px;
+        }
+        .responseSearch {
+          cursor: pointer;
+          width: 33%;
+          h4 {
+            text-align: start;
+          }
+          ul {
+            list-style: none;
+            text-align: start;
+            width: 100%;
+          }
+        }
+        .choosenIngredients {
+          width: 33%;
+          h4 {
+            text-align: end;
+          }
+          ul {
+            list-style: none;
+            text-align: end;
+            width: 60%;
+          }
+        }
+      }
+    }
+    .formTypes {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-direction: row;
+      width: 77%;
+      select {
+        padding: 5px;
+        font-size: 1.02em;
+        font-family: "Segoe UI Emoji", sans-serif;
+        border: none;
+        border-radius: 4px;
+      }
+    }
+    .formPicture {
+      width: 70%;
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+      flex-direction: row;
+      input {
+
+      }
     }
   }
-
+  .submitRecipe {
+    width: 30%;
+    padding: 10px;
+    border: none;
+    border-radius: 4px;
+    background-color: #27ae60;
+    color: white;
+    cursor: pointer;
+    font-size: 16px;
+    margin-bottom: 30px;
+  }
 }
+
 .back-form {
   width: 100vw;
   position: fixed;
@@ -445,4 +617,7 @@
   background-image: url('./assets/back-form.jpg');
   background-repeat: no-repeat;
   background-size: cover;
+}
+h3, h4 {
+  color: rgba(0, 24, 10, 0.9);
 }
