--- a/client/src/App.css
+++ b/client/src/App.css
@@ -40,6 +40,10 @@
   display: flex;
   flex-grow: 1;
   justify-content: center;
+  width: 80%;
+  .add-recipe {
+    width: 100%;
+  }
 }
 
 .header p {
@@ -53,6 +57,8 @@
   justify-content: space-evenly;
   margin-right: 8px;
   width: 15%;
+  height: 50px;
+  background-color: red;
 }
 
 .header button {
@@ -191,9 +197,14 @@
   transition: all 0.5s ease-in-out;
   overflow: hidden;
   margin: 10px 15px 10px 15px;
-  background-image: url('assets/background.jpg');
+  .picture-recipe-unit {
+    width: 100%;
+    height: 100%;
+    border-radius: 8px 8px 0 0;
+  }
+  /*background-image: url('assets/background.jpg');
   background-size: cover;
-  background-position: center;
+  background-position: center;*/
 }
 
 .card-hidden {
@@ -398,6 +409,12 @@
   text-decoration: underline;
 }
 
+.error-message {
+    color: #c0392b;
+    margin-bottom: 15px;
+    text-align: center;
+
+}
 /* ------------------------ ADD_RECIPE_FORM -------------------------- */
 
 .content-form {
