--- a/client/src/App.css
+++ b/client/src/App.css
@@ -38,11 +38,10 @@
 
 .pagePannel {
   display: flex;
-  flex-grow: 1;
   justify-content: center;
   width: 80%;
   .add-recipe {
-    width: 100%;
+    width: 200px;
   }
 }
 
@@ -96,21 +95,29 @@
 }
 
 /* ------------------------ SEARCHBAR -------------------------- */
+.search {
+  width: 100%;
+  height: 50%;
 
+}
 .searchbar {
   display: flex;
   flex-direction: column;
-  /* padding: 10px; */
   background-image: url('assets/background2.jpg');
   background-size: cover;
   background-position: center;
-  /* background-repeat: no-repeat; */
-  display: flex;
   justify-content: center;
   align-items: center;
   height: 40rem;
 }
+.response {
+  background-color: blue;
+  width: 100%;
+  margin: 10px;
+}
+.search-results {
 
+}
 .titleSearchbar {
   color: var(--white-font-color);
   font-size: 48px;
