--- a/client/src/App.css
+++ b/client/src/App.css
@@ -31,6 +31,10 @@
   justify-content: center;
 }
 
+.helloDude {
+
+}
+
 .header img {
   width: 30%;
   margin-left: 4%;
@@ -111,13 +115,42 @@
   height: 40rem;
 }
 .response {
-  background-color: blue;
+  height: 200px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: row;
   width: 100%;
   margin: 10px;
-}
-.search-results {
+  .search-results {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
 
+
+    animation: fadeIn 0.5s ease-out;
+
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    box-shadow: 0 2px 4px rgba(0,0,0,0.2);
+    margin-top: 20px;
+
+
+    .responseInputUnit {
+      margin: 10px;
+      border-radius: 5px;
+      background-color: #e7ffdb;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      flex-direction: column;
+      padding: 3px;
+    }
+  }
 }
+
 .titleSearchbar {
   color: var(--white-font-color);
   font-size: 48px;
@@ -691,4 +724,17 @@ h3, h4 {
   border: none;
   background: transparent;
   cursor: pointer;
+}
+
+
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+    transform: translateY(-20px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
 }
