--- a/client/src/App.css
+++ b/client/src/App.css
@@ -731,13 +731,72 @@ h4 {
 .search-screen {
   width: 100%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  margin-top: 120px;
+  .icon-detail-recipe {
+    width: 30px;
+    height: 30px;
+  }
   h1 {
-    margin-left: 5%;
-    text-align: start;
-    margin-top: 100px;
+    width: 100%;
+    text-align: center;
     font-size: 48px;
     font-weight: bold;
     margin-bottom: 30px;
+  }
+  .content-recipe-detail {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    flex-direction: row;
+    width: 90%;
+    .picture-recipe-detail {
+        width: 30%;
+        height: auto;
+    }
+    .description-recipe-detail {
+      width: 70%;
+      margin-left: 10%;
+      p {
+        margin-left: 5%;
+      }
+      h3 {
+        font-size: 36px;
+        font-weight: bold;
+        margin-bottom: 20px;
+      }
+      ul {
+        list-style: none;
+        padding: 0;
+        margin: 0 0 0 5%;
+        li {
+          margin-bottom: 10px;
+          font-size: 20px;
+        }
+      }
+      ol {
+        list-style: none;
+        padding: 0;
+        margin-bottom: 60px;
+        li {
+          margin-bottom: 10px;
+          font-size: 20px;
+        }
+      }
+    }
+  }
+  h2 {
+    margin-top: 4%;
+    width: 100%;
+    text-align: center;
+    font-size: 36px;
+    font-weight: bold;
+    .associate-recipes {
+      margin-top: 5%;
+    }
   }
 }
 
