--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,6 +98,7 @@
   margin-left: 0px;
 }
 
+
 /* ------------------------ SEARCHBAR -------------------------- */
 .search {
   width: 100%;
@@ -809,4 +810,24 @@ h4 {
   overflow-x: auto;
   gap: 20px;
   padding: 20px 0;
+}
+
+.titleHomePage {
+  width: 100%;
+  height: 100%;
+  border-radius: 8px 8px 0 0;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: auto;
+  h1 {
+    margin: auto;
+    text-align: center;
+    font-size: 2.4em;
+  }
+}
+
+.carousel-search-sreen {
+  margin-top: 140px;
+  width: auto;
 }
