--- a/client/src/App.css
+++ b/client/src/App.css
@@ -98,7 +98,6 @@
   margin-left: 0px;
 }
 
-
 /* ------------------------ SEARCHBAR -------------------------- */
 .search {
   width: 100%;
@@ -755,8 +754,8 @@ h4 {
     flex-direction: row;
     width: 90%;
     .picture-recipe-detail {
-        width: 30%;
-        height: auto;
+      width: 30%;
+      height: auto;
     }
     .description-recipe-detail {
       width: 70%;
@@ -830,4 +829,50 @@ h4 {
 .carousel-search-sreen {
   margin-top: 140px;
   width: auto;
+}
+
+.modal-overlay {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.modal-content {
+  background-color: #fff;
+  padding: 20px;
+  border-radius: 5px;
+  width: 50%;
+  max-height: 50%;
+  overflow-y: auto;
+}
+
+.close-modal {
+  float: right;
+  font-size: 1.5em;
+}
+
+.accordion {
+  background-color: #eee;
+  color: #444;
+  cursor: pointer;
+  padding: 18px;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 15px;
+  transition: 0.4s;
+}
+
+.panel {
+  padding: 0 18px;
+  background-color: white;
+  display: none;
+  overflow: hidden;
 }
